--- a/assets/css/tstranslation.css
+++ b/assets/css/tstranslation.css
@@ -56,3 +56,7 @@
     border-radius: 0;
     display: inline;
 }
+.ts-language-widget.inline .ts-current-lang-link {
+    color: inherit;
+    text-decoration: none;
+}
